Assignment1/Grammer.txt
Program ::= Defs
Defs  ::= Def
       |  Def Defs
Def   ::= Ident '=' Curve
       |  Ident '=' Curve 'where' '{' Defs '}'
Curve ::= Curve' '++' Curve 
       |  Curve' '^' Curve
	   |  Curve' 
	   
Curve'::= CurveTerm CurveOpt

CurveTerm ::= '(' Curve ')'
           |  Point
           |  Ident
		   
CurveOpt ::= '->' Point CurveOpt
           | '**' Expr CurveOpt
           | 'refv' Expr CurveOpt
           |  'refh' Expr CurveOpt
           |  'rot' Expr CurveOpts
		   | e
		   
Point ::= '(' Expr ',' Expr ')'

Expr  ::= Expr' '+' Expr
       |  Expr' '*' Expr
	   |  Expr'
	   
Expr' ::= 'width' Curve
       |  'height' Curve
       |   Number
       |  '(' Expr ')'
